# OpenCV_lab

./: CMakeLists.txt
src/: main.cpp  texture_cv.cpp  texture_cv.h
src/GUI/: IP_menu.cpp  IP_menu.h  edit_gui.cpp  render_UI.cpp  render_UI.h  tests_menu.cpp  tests_menu.h
src/filter/: filtering.cpp  median_blur.h  median_blur1.h
src/funcs/: homography.h
src/glad/: CMakeLists.txt  README.MD
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/renderer/: OpenGL_framebuffer.cpp
src/tests/: test.cpp  test_3D.cpp  test_clear_color.cpp  test_cv_image.cpp  test_texture_2D.cpp
